force-app/main/default/objects/Event_Template__c/Event_Template__c.object-meta.xml
<CustomObject>
    <label>Event Template</label>
    <nameField>
        <label>Event Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>