force-app/main/default/objects/Event_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicated if the event template is still active</description>
    <inlineHelpText>To indicate if the event template is still active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>