force-app/main/default/objects/Event_Template__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <label>Cvent Template Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>