force-app/main/default/objects/Event_Template__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the enterprise level program this event is related to.</description>
    <inlineHelpText>Enterprise level program this event is related to.</inlineHelpText>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Program must be an enterprise-level program.</errorMessage>
        <filterItems>
            <field>Program__c.Enterprise_Level_Program__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Event Templates</relationshipLabel>
    <relationshipName>Event_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>