force-app/main/default/objects/Event_Template__c/fields/Volunteer_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Event_Type__c</fullName>
    <label>Volunteer Event Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>