force-app/main/default/objects/Event_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Volunteer_Event_Type__c</columns>
    <columns>Event_Code__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>